Closed
Bug 710098
Opened 9 years ago
Closed 9 years ago
"ASSERTION: vertical damage extends outside table" with changing colspan
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: jruderman, Assigned: bernd_mozilla)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ASSERTION: vertical damage extends outside table: '(aValue).YMost() <= GetRowCount()', file layout/tables/nsTableFrame.cpp, line 3810
Reporter | ||
Comment 1•9 years ago
|
||
review hint http://mxr.mozilla.org/mozilla-central/source/layout/tables/nsCellMap.cpp#2150 we need both the colspan and the rowspan as effective (aka in real cellmap coordinates) this code is from http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/tables/nsCellMap.cpp&rev=3.44
Comment 5•9 years ago
|
||
Bernd, did you intend to ask me to review this patch?
Comment on attachment 584450 [details] [diff] [review] patch Yes, the problem is old but currently its the only remainder of the damagearea patch.
Attachment #584450 -
Flags: review?(matspal)
Updated•9 years ago
|
Attachment #584450 -
Flags: review?(matspal) → review+
https://hg.mozilla.org/mozilla-central/rev/92efb7a05df5
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in
before you can comment on or make changes to this bug.
Description
•