bug 710098 - use effective rowspan r=mats